airflow/logs/dag_id=data-ingestion/run_id=manual__2024-07-02T05:01:07.895376+00:00/task_id=ingest_from_mysql/attempt=5.log
[2024-07-02T05:11:05.529+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-02T05:11:05.538+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data-ingestion.ingest_from_mysql manual__2024-07-02T05:01:07.895376+00:00 [queued]>
[2024-07-02T05:11:05.542+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data-ingestion.ingest_from_mysql manual__2024-07-02T05:01:07.895376+00:00 [queued]>
[2024-07-02T05:11:05.542+0000] {taskinstance.py:2306} INFO - Starting attempt 5 of 6
[2024-07-02T05:11:05.549+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonVirtualenvOperator): ingest_from_mysql> on 2024-07-02 05:01:07.895376+00:00
[2024-07-02T05:11:05.556+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=904) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-02T05:11:05.557+0000] {standard_task_runner.py:63} INFO - Started process 905 to run task
[2024-07-02T05:11:05.556+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'data-ingestion', 'ingest_from_mysql', 'manual__2024-07-02T05:01:07.895376+00:00', '--job-id', '26', '--raw', '--subdir', 'DAGS_FOLDER/data-ingestion.py', '--cfg-path', '/tmp/tmpk79tfrbi']
[2024-07-02T05:11:05.559+0000] {standard_task_runner.py:91} INFO - Job 26: Subtask ingest_from_mysql
[2024-07-02T05:11:05.569+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-07-02T05:11:05.588+0000] {task_command.py:426} INFO - Running <TaskInstance: data-ingestion.ingest_from_mysql manual__2024-07-02T05:01:07.895376+00:00 [running]> on host ***-scheduler
[2024-07-02T05:11:05.616+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data-ingestion' AIRFLOW_CTX_TASK_ID='ingest_from_mysql' AIRFLOW_CTX_EXECUTION_DATE='2024-07-02T05:01:07.895376+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-02T05:01:07.895376+00:00'
[2024-07-02T05:11:06.032+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-02T05:11:06.033+0000] {baseoperator.py:400} WARNING - PythonVirtualenvOperator.execute cannot be called outside TaskInstance!
[2024-07-02T05:11:06.035+0000] {process_utils.py:183} INFO - Executing cmd: /home/***/.local/bin/python -m virtualenv /tmp/venv_4_2b8h3 --python=python
[2024-07-02T05:11:06.038+0000] {process_utils.py:187} INFO - Output:
[2024-07-02T05:11:06.519+0000] {process_utils.py:191} INFO - created virtual environment CPython3.12.4.final.0-64 in 177ms
[2024-07-02T05:11:06.524+0000] {process_utils.py:191} INFO -   creator CPython3Posix(dest=/tmp/venv_4_2b8h3, clear=False, no_vcs_ignore=False, global=False)
[2024-07-02T05:11:06.524+0000] {process_utils.py:191} INFO -   seeder FromAppData(download=False, pip=bundle, via=copy, app_data_dir=/home/***/.local/share/virtualenv)
[2024-07-02T05:11:06.525+0000] {process_utils.py:191} INFO -     added seed packages: pip==24.0
[2024-07-02T05:11:06.525+0000] {process_utils.py:191} INFO -   activators BashActivator,CShellActivator,FishActivator,NushellActivator,PowerShellActivator,PythonActivator
[2024-07-02T05:11:06.535+0000] {process_utils.py:183} INFO - Executing cmd: /tmp/venv_4_2b8h3/bin/pip install -r /tmp/venv_4_2b8h3/requirements.txt
[2024-07-02T05:11:06.536+0000] {process_utils.py:187} INFO - Output:
[2024-07-02T05:11:07.885+0000] {process_utils.py:191} INFO - 
[2024-07-02T05:11:07.887+0000] {process_utils.py:191} INFO - [notice] A new release of pip is available: 24.0 -> 24.1.1
[2024-07-02T05:11:07.887+0000] {process_utils.py:191} INFO - [notice] To update, run: python -m pip install --upgrade pip
[2024-07-02T05:11:07.928+0000] {process_utils.py:183} INFO - Executing cmd: /tmp/venv_4_2b8h3/bin/python /tmp/venv-callauiiq_n6/script.py /tmp/venv-callauiiq_n6/script.in /tmp/venv-callauiiq_n6/script.out /tmp/venv-callauiiq_n6/string_args.txt /tmp/venv-callauiiq_n6/termination.log
[2024-07-02T05:11:07.929+0000] {process_utils.py:187} INFO - Output:
[2024-07-02T05:11:07.937+0000] {process_utils.py:191} INFO -   File "/tmp/venv-callauiiq_n6/script.py", line 64
[2024-07-02T05:11:07.937+0000] {process_utils.py:191} INFO -     unusual_prefix_50923f202a1be2ffe879bd287c2681623b93c2bb_data-ingestion  = types.ModuleType("unusual_prefix_50923f202a1be2ffe879bd287c2681623b93c2bb_data-ingestion")
[2024-07-02T05:11:07.938+0000] {process_utils.py:191} INFO -     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[2024-07-02T05:11:07.938+0000] {process_utils.py:191} INFO - SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
[2024-07-02T05:11:07.950+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-02T05:11:08.255+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 437, in execute
    return super().execute(context=serializable_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 759, in execute_callable
    result = self._execute_python_callable_in_subprocess(python_path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 497, in _execute_python_callable_in_subprocess
    execute_in_subprocess(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/process_utils.py", line 172, in execute_in_subprocess
    execute_in_subprocess_with_kwargs(cmd, cwd=cwd)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/process_utils.py", line 195, in execute_in_subprocess_with_kwargs
    raise subprocess.CalledProcessError(exit_code, cmd)
subprocess.CalledProcessError: Command '['/tmp/venv_4_2b8h3/bin/python', '/tmp/venv-callauiiq_n6/script.py', '/tmp/venv-callauiiq_n6/script.in', '/tmp/venv-callauiiq_n6/script.out', '/tmp/venv-callauiiq_n6/string_args.txt', '/tmp/venv-callauiiq_n6/termination.log']' returned non-zero exit status 1.
[2024-07-02T05:11:08.264+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=data-ingestion, task_id=ingest_from_mysql, run_id=manual__2024-07-02T05:01:07.895376+00:00, execution_date=20240702T050107, start_date=20240702T051105, end_date=20240702T051108
[2024-07-02T05:11:08.273+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 26 for task ingest_from_mysql (Command '['/tmp/venv_4_2b8h3/bin/python', '/tmp/venv-callauiiq_n6/script.py', '/tmp/venv-callauiiq_n6/script.in', '/tmp/venv-callauiiq_n6/script.out', '/tmp/venv-callauiiq_n6/string_args.txt', '/tmp/venv-callauiiq_n6/termination.log']' returned non-zero exit status 1.; 905)
[2024-07-02T05:11:08.296+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-02T05:11:08.331+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-02T05:11:08.331+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
